--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -838,7 +838,9 @@
                                 "prompt": "This operation will delete all Docker images, containers, and volumes.\nWould you like to continue?",
                                 "command": [
                                     "rm -rf /var/lib/docker",
-                                    "rm -rf /var/lib/containerd"
+                                    "rm -rf /var/lib/containerd",
+                                    "rm -f /usr/share/keyrings/docker.gpg",
+                                    "rm -f /etc/apt/sources.list.d/docker.list"
                                 ],
                                 "status": "Active",
                                 "doc_link": "",
