--- a/tests/M01.conf
+++ b/tests/M01.conf
@@ -1,3 +1,2 @@
 ENABLED=true
-PREINSTALL="bash bin/armbian-configng --cmd M00"
-CONDITION="[ dpkg -l | grep cockpit ]"
+CONDITION="[ ! dpkg -l | grep cockpit ]"
