--- a/tests/M00.conf
+++ b/tests/M00.conf
@@ -1,3 +1,2 @@
 ENABLED=true
-PREINSTALL="bash bin/armbian-configng --cmd M01"
-CONDITION="[ ! dpkg -l | grep cockpit ]"
+CONDITION="[ dpkg -l | grep cockpit ]"
