Remove Trixe from unit tests as it often fails

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -45,7 +45,7 @@ jobs:
 
           echo 'JSON_CONTENT<<EOF' >> $GITHUB_OUTPUT
           # define docker images where we will run test install
-          dockerimages=("debian:bookworm" "debian:trixie" "ubuntu:jammy" "ubuntu:noble")
+          dockerimages=("debian:bookworm" "ubuntu:jammy" "ubuntu:noble")
 
           # read tests cases and loop them
 
