--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -12,11 +12,11 @@ on:
 jobs:
 
   Debian:
-    uses: armbian/scripts/.github/workflows/pack-debian.yml@master
+    uses: armbian/scripts/.github/workflows/pack-debian.yml@main
     with:
       matrix: "all:jammy"
       maintainer: "Igor Pecovnik <igor@armbian.com>"
-      package: "armbian-configng"
+      package: "armbian-config"
       licence: "GPL 2.0"
       homepage: "https://www.armbian.com"
       section: "default"
