--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -584,11 +584,13 @@
                             "sub": [
                                 {
                                     "id": "DE01",
+                                    "prompt": "Install XFCE:\nXfce is a lightweight desktop environment for UNIX-like operating systems. It aims to be fast and low on system resources, while still being visually appealing and user friendly.",
                                     "description": "XFCE desktop Install",
                                     "command": [
                                         "manage_desktops 'xfce' 'install'"
                                     ],
                                     "status": "Stable",
+                                    "src_reference": "https://www.xfce.org/about",
                                     "author": "@igorpecovnik",
                                     "condition": "[ ! -f /usr/share/xsessions/xfce.desktop ]"
                                 },
