dynamic document (software) FInal draft (#188)
* draft dynamic document
* Fix: not found
* Fix: proper names for parrent menus
* regen desktop.md
* fix missing info and added prompt usable in md
* dynamic document (software) 2nd draft
* ouptut of ./tools/config-dynamic-docs.py
* changed ID S07.1 to  proper name to be consistant with software setion
* moved ./share/doc to ./docs
* Changed markdown generation script to improve documentation structure
* chore: Remove unused documentation files
* markdown files generated from script
* staging: json key name chages
* Bug: `return 1`  breaks `process_input` user canceling needs to exit with no error
* chore: Refactor script to use about instead of prompt
* show output of `./tools/config-markdown.py`
* add: -u and -t args for config-markdown
* fix typo
* removed docs folder ment for actions
* cleane up config-markdown removed unused code
* removed TOC from user generation
* remove <a.. links, restored level for heading tag "#" "##"

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -9,16 +9,18 @@
                     "description": "Desktop Environments",
                     "sub": [
                         {
-                            "id": "DE00",
+                            "id": "XFCE",
                             "description": "XFCE desktop",
                             "sub": [
                                 {
                                     "id": "DE01",
+                                    "prompt": "Install XFCE:\nXfce is a lightweight desktop environment for UNIX-like operating systems. It aims to be fast and low on system resources, while still being visually appealing and user friendly.",
                                     "description": "XFCE desktop Install",
                                     "command": [
                                         "manage_desktops 'xfce' 'install'"
                                     ],
                                     "status": "Stable",
+                                    "src_reference": "https://www.xfce.org/about",
                                     "author": "@igorpecovnik",
                                     "condition": "[ ! -f /usr/share/xsessions/xfce.desktop ]"
                                 },
@@ -55,7 +57,7 @@
                             ]
                         },
                         {
-                            "id": "DE10",
+                            "id": "Gnome",
                             "description": "Gnome desktop",
                             "sub": [
                                 {
@@ -148,7 +150,7 @@
                             ]
                         },
                         {
-                            "id": "DE30",
+                            "id": "Cinnamon",
                             "description": "Cinnamon desktop",
                             "sub": [
                                 {
